# nexrates

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  pyproject.toml  tox.ini
nexrates/: __init__.py  data.py  routes.py  utils.py
nexrates/templates/: index.html
tests/: test_data.py  test_nexrates.py
